[gd_scene load_steps=6 format=2]

[ext_resource path="res://Prefabs/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Res/Alef-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Prefabs/Gravity_Well.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 200, 200 )

[node name="Gravity_Well_1" parent="." instance=ExtResource( 4 )]

[node name="Gravity_Well_2" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )

[node name="HealthLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
